# architekturaheleny.pl

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  template.py
.github/workflows/: gh-pages.yml
scripts/: download_from_cms.py  transcode_mov_to_mp4.sh
src/components/: footer.html  layout.html  navbar.html  project_detail.html
src/site/: 404.html  global.css  index.html
src/site/o-mnie/: index.html
src/site/projekty/: index.html
